fix agent interface main content overlapping menu bar

--- a/client/src/css/agentInterface.scss
+++ b/client/src/css/agentInterface.scss
@@ -14,7 +14,7 @@
      display: none;
 }
 main {
-     padding-top: 70px;
+     padding-top: 120px;
 }
 .inline {
      display: inline;
